--- a/main.css
+++ b/main.css
@@ -1,23 +1,37 @@
- div {
-     background-color: lightblue;
-     background-image: linear-gradient(90deg, transparent 79px, #d4abbf 79px, #d4abbf 84px, transparent 81px), linear-gradient(#eee .1em, transparent .1em);
-     padding: 0 100px 0;
-     background-size: 100% 30px;
- }
- 
- p {
-     line-height: 30px;
-     margin: 0;
-     padding: 0;
- }
- 
- h1 {
-     text-align: center;
-     color: green;
-     font-size: xx-large;
- }
- 
- p {
-     color: teal;
-     font-size: large;
- }
+body {
+    background-image: url(/aprender.png);
+    background-size: cover;
+    width: 80%;
+    margin-left: 10%;
+}
+
+div {
+    background-color: lightblue;
+    background-image: linear-gradient(90deg, transparent 79px, #d4abbf 79px, #d4abbf 84px, transparent 81px), linear-gradient(#eee .1em, transparent .1em);
+    padding: 0 100px 0;
+    background-size: 100% 30px;
+}
+
+p {
+    line-height: 30px;
+    margin: 0;
+    padding: 0;
+}
+
+h1 {
+    text-align: center;
+    color: #fff;
+    font-size: xx-large;
+}
+
+p {
+    color: teal;
+    font-size: large;
+}
+
+footer {
+    margin-top: 100px;
+    background-color: transparent;
+    width: 100%;
+    height: 100px;
+}
