--- a/main.css
+++ b/main.css
@@ -1,3 +1,10 @@
+ body {
+     background-image: url(/aprender.png);
+     background-size: cover;
+     width: 80%;
+     margin-left: 10%;
+ }
+ 
  div {
      background-color: lightblue;
      background-image: linear-gradient(90deg, transparent 79px, #d4abbf 79px, #d4abbf 84px, transparent 81px), linear-gradient(#eee .1em, transparent .1em);
@@ -13,11 +20,18 @@
  
  h1 {
      text-align: center;
-     color: green;
+     color: #fff;
      font-size: xx-large;
  }
  
  p {
-     color: teal;
+     color: black;
      font-size: large;
+ }
+ 
+ footer {
+     margin-top: 100px;
+     background-color: transparent;
+     width: 100%;
+     height: 100px;
  }
