--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(/aprender.png);
+    background-image: url(/fotos/aprender.png);
     background-size: cover;
     width: 80%;
     margin-left: 10%;
